# MoC

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run.sh  cland-format  gitignore
src/: commqueue.c  commqueue.h  consts.h  img_utils.c  img_utils.h  main.c  parse.c  parse.h  stb_implem.c  tileheap.c  tileheap.h  tileset.c  tileset.h
src/threads/: fit_thread.c  fit_thread.h  prod_thread.c  prod_thread.h  read_thread.c  read_thread.h
